--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import the contents from flatiron_stats.py\n",
+    "!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flat\n",
     "#You may also wish to open up flatiron_stats.py in a text editor to preview its contents."
    ]
   },
