Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,11 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTRIBUTING.md  images  index.ipynb  LICENSE.md  README.md\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!"
+    "!ls"
    ]
   },
   {
