--- a/index.ipynb
+++ b/index.ipynb
@@ -63,6 +63,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "weg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from flat\n",
     "#You may also wish to open up flatiron_stats.py in a text editor to preview its contents."
    ]
