Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,11 +59,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-05-21 20:45:18--  https://raw.githubusercontent.com/learn-co-students/dsc-effect-sizes-pvalues-and-power-lab-houston-ds-042219/solution/flatiron_stats.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.20.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.20.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1270 (1.2K) [text/plain]\n",
+      "Saving to: ‘flatiron_stats.py’\n",
+      "\n",
+      "flatiron_stats.py   100%[===================>]   1.24K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2019-05-21 20:45:18 (114 MB/s) - ‘flatiron_stats.py’ saved [1270/1270]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "weg"
+    "!wget https://raw.githubusercontent.com/learn-co-students/dsc-effect-sizes-pvalues-and-power-lab-houston-ds-042219/solution/flatiron_stats.py"
    ]
   },
   {
@@ -72,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flat\n",
+    "from flatiron_stats\n",
     "#You may also wish to open up flatiron_stats.py in a text editor to preview its contents."
    ]
   },
