Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flatiron_stats\n",
+    "from flatiron_stats import *\n",
     "#You may also wish to open up flatiron_stats.py in a text editor to preview its contents."
    ]
   },
