--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
     "import numpy as np\n",
     "def generate_samples(m1,s1,n1,m2,s2,n2):\n",
     "    #Your code here; have the function create two random samples using the input parameters\n",
-    "    sample1 = np.random.\n",
+    "    sample1 = np.random.normal(loc=m1, scale=1)\n",
     "    return sample1, sample2"
    ]
   },
