--- a/index.ipynb
+++ b/index.ipynb
@@ -121,6 +121,7 @@
     "def generate_samples(m1,s1,n1,m2,s2,n2):\n",
     "    #Your code here; have the function create two random samples using the input parameters\n",
     "    sample1 = np.random.normal(loc=m1, scale=s1, size=n1)\n",
+    "    sample2 = np.random.normal(loc=m2, scale=s2, size=n1)\n",
     "    return sample1, sample2"
    ]
   },
