Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,6 +157,7 @@
     "\n",
     "#Pseudo code outline\n",
     "# for effect size:\n",
+    "for ef\n",
     "#     for sample_size:\n",
     "#         perform 100 simulations\n",
     "#         calculate power\n",
