--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,9 @@
     "\n",
     "#Pseudo code outline\n",
     "# for effect size:\n",
-    "for ef\n",
+    "for effect_size in effect_sizes:\n",
     "#     for sample_size:\n",
+    "    for sample_\n",
     "#         perform 100 simulations\n",
     "#         calculate power\n",
     "#         store effect_size, sample_size, power for simulations"
