Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,8 +159,9 @@
     "# for effect size:\n",
     "for effect_size in effect_sizes:\n",
     "#     for sample_size:\n",
-    "    for sample_\n",
+    "    for sample_size in sample_sizes:\n",
     "#         perform 100 simulations\n",
+    "    \n",
     "#         calculate power\n",
     "#         store effect_size, sample_size, power for simulations"
    ]
