Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,9 +161,11 @@
     "#     for sample_size:\n",
     "    for sample_size in sample_sizes:\n",
     "#         perform 100 simulations\n",
-    "        for _ in \n",
+    "        for _ in range(100):\n",
     "#         calculate power\n",
-    "#         store effect_size, sample_size, power for simulations"
+    "        \n",
+    "#         store effect_size, sample_size, power for simulations\n",
+    "            effectI"
    ]
   },
   {
