Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "\n",
+    "effect_sizes = [0, 0.01,.1,.2, .5, 1, 2]\n",
+    "sample_sizes = range(5,750,5)\n",
     "#Pseudo code outline\n",
     "# for effect size:\n",
     "for effect_size in effect_sizes:\n",
