--- a/index.ipynb
+++ b/index.ipynb
@@ -163,6 +163,7 @@
     "    for sample_size in sample_sizes:\n",
     "#         perform 100 simulations\n",
     "        for _ in range(100):\n",
+    "            sample1, sample2 = generate_samples(m1,s1,n1,m2,s2,n2)\n",
     "#         calculate power\n",
     "        \n",
     "#         store effect_size, sample_size, power for simulations\n",
