Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,13 +154,15 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "effect_sizes = [0, 0.01,.1,.2, .5, 1, 2]\n",
-    "sample_sizes = range(5,750,5)\n",
+    "effect_sizes = []\n",
+    "sample_sizes = []\n",
+    "powers = []\n",
+    "\n",
     "#Pseudo code outline\n",
     "# for effect size:\n",
-    "for effect_size in effect_sizes:\n",
+    "for effect_size in [0, 0.01,.1,.2, .5, 1, 2]:\n",
     "#     for sample_size:\n",
-    "    for sample_size in sample_sizes:\n",
+    "    for sample_size in range(5,750,5):\n",
     "#         perform 100 simulations\n",
     "        for _ in range(100):\n",
     "            sample1, sample2 = generate_samples(5,1,sample_size,5,1,sample_size)\n",
