Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "#Your code here\n",
     "effect_sizes = []\n",
     "sample_sizes = []\n",
-    "powers = []\n",
+    "\n",
     "\n",
     "#Pseudo code outline\n",
     "# for effect size:\n",
@@ -164,10 +164,12 @@
     "#     for sample_size:\n",
     "    for sample_size in range(5,750,5):\n",
     "#         perform 100 simulations\n",
+    "        powers = []\n",
     "        for _ in range(100):\n",
     "            sample1, sample2 = generate_samples(5,1,sample_size,5,1,sample_size)\n",
     "#         calculate power\n",
-    "            \n",
+    "        \n",
+    "        powers.append()\n",
     "        \n",
     "#         store effect_size, sample_size, power for simulations\n",
     "            "
