Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "#Your code here\n",
     "effect_sizes = []\n",
     "sample_sizes = []\n",
-    "\n",
+    "mean_powers = []\n",
     "\n",
     "#Pseudo code outline\n",
     "# for effect size:\n",
@@ -169,7 +169,7 @@
     "            sample1, sample2 = generate_samples(5,1,sample_size,5,1,sample_size)\n",
     "#         calculate power\n",
     "        \n",
-    "        powers.append()\n",
+    "        mean_powers.append()\n",
     "        \n",
     "#         store effect_size, sample_size, power for simulations\n",
     "            "
