--- a/index.ipynb
+++ b/index.ipynb
@@ -164,9 +164,10 @@
     "#     for sample_size:\n",
     "    for sample_size in range(5,750,5):\n",
     "#         perform 100 simulations\n",
-    "        powers = []\n",
+    "        num_rejections = 0\n",
     "        for _ in range(100):\n",
     "            sample1, sample2 = generate_samples(5,1,sample_size,5,1,sample_size)\n",
+    "            p = p_value_welch_ttest(a, b, two_sided=True)\n",
     "#         calculate power\n",
     "        \n",
     "        mean_powers.append()\n",
