Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,9 +167,10 @@
     "        num_rejections = 0\n",
     "        for _ in range(100):\n",
     "            sample1, sample2 = generate_samples(5,1,sample_size,5,1,sample_size)\n",
-    "            p = p_value_welch_ttest(a, b, two_sided=True)\n",
+    "            p = p_value_welch_ttest(sample1, sample2, two_sided=True)\n",
     "#         calculate power\n",
-    "        \n",
+    "            if p < 0.05:\n",
+    "                num_rejections += 1\n",
     "        mean_powers.append()\n",
     "        \n",
     "#         store effect_size, sample_size, power for simulations\n",
