Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "#Your code here\n",
     "effect_sizes = []\n",
     "sample_sizes = []\n",
-    "mean_powers = []\n",
+    "powers = []\n",
     "\n",
     "#Pseudo code outline\n",
     "# for effect size:\n",
@@ -171,7 +171,9 @@
     "#         calculate power\n",
     "            if p < 0.05:\n",
     "                num_rejections += 1\n",
-    "        mean_powers.append()\n",
+    "        powers.append(num_rejections/100.)\n",
+    "        effect_sizes.append(effect_size)\n",
+    "        \n",
     "        \n",
     "#         store effect_size, sample_size, power for simulations\n",
     "            "
