Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
     "                num_rejections += 1\n",
     "        powers.append(num_rejections/100.)\n",
     "        effect_sizes.append(effect_size)\n",
-    "        \n",
+    "        sample_sizes.append(sample_size)\n",
     "        \n",
     "#         store effect_size, sample_size, power for simulations\n",
     "            "
