Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
     "#         calculate power\n",
     "            if p < 0.05:\n",
     "                num_rejections += 1\n",
-    "        powers.append(num_rejections/100.)\n",
+    "        powers.append(1-num_rejections/100.)\n",
     "        effect_sizes.append(effect_size)\n",
     "        sample_sizes.append(sample_size)\n",
     "        \n",
