Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     "plt.pcolor(zz)\n",
     "#plt.contourf(xx,yy,zz) # if you want contour plot\n",
     "#plt.imshow(zz)\n",
-    "plt.\n",
+    "plt.colorbar()\n",
     "plt.show()"
    ]
   },
